--- a/style.css
+++ b/style.css
@@ -182,6 +182,8 @@ body {
     display: flex;
     align-items: center;
     gap: 116px;
+    margin-bottom: 120px;
+    justify-content: center;
 }
 
 .offer_info {}
@@ -204,6 +206,7 @@ body {
     font-size: 20px;
     font-weight: 400;
     color: #85838a;
+    width: 396px;
 }
 
 .offer_image {}
@@ -231,6 +234,7 @@ body {
     color: #85838a;
     margin-top: 16px;
     margin-bottom: 40px;
+    width: 271px;
 }
 
 .year_sticker {}
